--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </p>
 
         <!-- Tagline -->
-        <h1 class="tagline" onclick="openForm()">Apply to join here</h1>
+        <h1 class="tagline" onclick="openForm()">Enroll here</h1>
 
     </div>
 
