--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </p>
 
         <!-- Tagline -->
-        <h1 class="tagline" onclick="openForm()">Enroll here</h1>
+        <h1 class="tagline" onclick="openForm()">Apply here</h1>
 
     </div>
 
