Remove New York Community from the option, add davos and WEF

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
                             <option value="club-y-paris">Club Y Paris Event</option>
                             <option value="club-y-london">Club Y London Event</option>
                             <option value="club-y-retreat">Club Y Retreat</option>
-                            <option value="ny-community">New York Community</option>
+                            <option value="wef-2025">World Economic Forum 2025</option>
+                            <option value="davos-2025">Davos 2025</option>
+                            <option value="humans-davos">Humans of Davos</option>
                             <option value="genzvc">Gen Z VC Chat</option>
                             <option value="fos-london">FOS London Chat</option>
                             <option value="yorkseed">Yorkseed Hub</option>
