what keeps u busy

--- a/index.html
+++ b/index.html
@@ -154,15 +154,14 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label>What best identifies you? *</label>
+                        <label>What keeps you busy? *</label>
                         <select id="identity" name="identity" required onchange="toggleOtherInput('identity')">
                             <option value="" disabled selected>Select...</option>
                             <option value="pre-seed-no-revenue">Pre-seed founder with no revenue</option>
-                            <option value="pre-seed-with-product">Pre-seed founder with working product</option>
-                            <option value="seed-founder">Seed founder</option>
-                            <option value="vc-enthusiast">Venture Capital enthusiast</option>
-                            <option value="vc-partner">Venture Capital Partner</option>
-                            <option value="creative">Creative / Athlete / Academic</option>
+                            <option value="seed-revenue">Seed founder with revenue</option>
+                            <option value="vc-investor">Venture Capital Investor/Enthusiast</option>
+                            <option value="big-tech">Big Tech Employee</option>
+                            <option value="creative">Creative/Athlete/Academic</option>
                             <option value="other">Other</option>
                         </select>
                         <input type="text" id="otherIdentity" name="otherIdentity" 
