--- a/index.html
+++ b/index.html
@@ -134,11 +134,14 @@
                             <option value="club-y-paris">Club Y Paris 🚀</option>
                             <option value="club-y-retreat">Club Y Retreat</option>
                             <option value="fos-london">FOS London</option>
+                            <option value="harvard">Harvard</option>
                             <option value="genzvc">Gen Z VC</option>
                             <option value="oxford-university">Oxford University</option>
                             <option value="slush">Slush</option>
+                            <option value="stanford">Stanford</option>
                             <option value="wef-2025">WEF 2025</option>
                             <option value="yorkseed">Yorkseed</option>
+                            <option value="yc-demo-day">YC Demo Day</option>
                             <option value="yc-founder">YC Founder</option>
                             <option value="other">Other</option>
                         </select>
