add more options

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-club-y-paris" name="referral[]" value="club-y-paris" class="referral-checkbox">
-                                <label for="referral-club-y-paris">Club Y Paris 🚀</label>
+                                <label for="referral-club-y-paris">Club Y Paris</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-club-y-retreat" name="referral[]" value="club-y-retreat" class="referral-checkbox">
@@ -147,11 +147,15 @@
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-harvard" name="referral[]" value="harvard" class="referral-checkbox">
-                                <label for="referral-harvard">Harvard</label>
+                                <label for="referral-harvard">Harvard University</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-genzvc" name="referral[]" value="genzvc" class="referral-checkbox">
                                 <label for="referral-genzvc">Gen Z VC</label>
+                            </div>
+                            <div class="checkbox-item">
+                                <input type="checkbox" id="referral-ivy-league" name="referral[]" value="ivy-league" class="referral-checkbox">
+                                <label for="referral-ivy-league">Ivy League Network</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-oxford-university" name="referral[]" value="oxford-university" class="referral-checkbox">
@@ -163,7 +167,7 @@
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-stanford" name="referral[]" value="stanford" class="referral-checkbox">
-                                <label for="referral-stanford">Stanford</label>
+                                <label for="referral-stanford">Stanford University</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-wef-2025" name="referral[]" value="wef-2025" class="referral-checkbox">
