newsletter instead of substack

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     </div>
                     <div class="form-group checkbox">
                         <input type="checkbox" id="newsletter" name="newsletter">
-                        <label for="newsletter">Subscribe to <a href="https://substack.com/@wearecluby" target="_blank" class="substack-link">Club Y Substack</a></label>
+                        <label for="newsletter">Subscribe to Club Y Newsletter</a></label>
                     </div>
                 </div>
                 
