--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
                                 <label for="referral-yc-founder">YC Founder</label>
                             </div>
                             <div class="checkbox-item">
+                                <input type="checkbox" id="referral-ef-anthropic" name="referral[]" value="ef-anthropic" class="referral-checkbox">
+                                <label for="referral-ef-anthropic">EF & Anthropic Hackathon</label>
+                            </div>
+                            <div class="checkbox-item">
                                 <input type="checkbox" id="referral-other" name="referral[]" value="other" class="referral-checkbox" onchange="toggleOtherReferralInput()">
                                 <label for="referral-other">Other</label>
                             </div>
