--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-ef-anthropic" name="referral[]" value="ef-anthropic" class="referral-checkbox">
-                                <label for="referral-ef-anthropic">EF & Anthropic Hackathon</label>
+                                <label for="referral-ef-anthropic">EF x Anthropic Hackathon</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-other" name="referral[]" value="other" class="referral-checkbox" onchange="toggleOtherReferralInput()">
