club y us added

--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
                                 <label for="referral-club-y-retreat">Club Y Retreat</label>
                             </div>
                             <div class="checkbox-item">
+                                <input type="checkbox" id="referral-club-y-retreat" name="referral[]" value="club-y-retreat" class="referral-checkbox">
+                                <label for="referral-club-y-retreat">Club Y US</label>
+                            </div>
+                            <div class="checkbox-item">
                                 <input type="checkbox" id="referral-fos-london" name="referral[]" value="fos-london" class="referral-checkbox">
                                 <label for="referral-fos-london">FOS London</label>
                             </div>
