--- a/index.html
+++ b/index.html
@@ -153,24 +153,32 @@
                                 <label for="referral-club-y-retreat">Club Y Retreat</label>
                             </div>
                             <div class="checkbox-item">
-                                <input type="checkbox" id="referral-club-y-retreat" name="referral[]" value="club-y-retreat" class="referral-checkbox">
-                                <label for="referral-club-y-retreat">Club Y US</label>
+                                <input type="checkbox" id="referral-club-y-us" name="referral[]" value="club-y-us" class="referral-checkbox">
+                                <label for="referral-club-y-us">Club Y US</label>
+                            </div>
+                            <div class="checkbox-item">
+                                <input type="checkbox" id="referral-ef-anthropic" name="referral[]" value="ef-anthropic" class="referral-checkbox">
+                                <label for="referral-ef-anthropic">EF & Anthropic Hackathon</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-fos-london" name="referral[]" value="fos-london" class="referral-checkbox">
                                 <label for="referral-fos-london">FOS London</label>
                             </div>
                             <div class="checkbox-item">
-                                <input type="checkbox" id="referral-harvard" name="referral[]" value="harvard" class="referral-checkbox">
-                                <label for="referral-harvard">Harvard University</label>
-                            </div>
-                            <div class="checkbox-item">
                                 <input type="checkbox" id="referral-genzvc" name="referral[]" value="genzvc" class="referral-checkbox">
                                 <label for="referral-genzvc">Gen Z VC</label>
                             </div>
                             <div class="checkbox-item">
+                                <input type="checkbox" id="referral-harvard" name="referral[]" value="harvard" class="referral-checkbox">
+                                <label for="referral-harvard">Harvard University</label>
+                            </div>
+                            <div class="checkbox-item">
                                 <input type="checkbox" id="referral-ivy-league" name="referral[]" value="ivy-league" class="referral-checkbox">
                                 <label for="referral-ivy-league">Ivy League Network</label>
+                            </div>
+                            <div class="checkbox-item">
+                                <input type="checkbox" id="referral-operators-friends" name="referral[]" value="operators-friends" class="referral-checkbox">
+                                <label for="referral-operators-friends">Operators and Friends</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-oxford-university" name="referral[]" value="oxford-university" class="referral-checkbox">
@@ -185,16 +193,12 @@
                                 <label for="referral-stanford">Stanford University</label>
                             </div>
                             <div class="checkbox-item">
+                                <input type="checkbox" id="referral-unicorn-mafia" name="referral[]" value="unicorn-mafia" class="referral-checkbox">
+                                <label for="referral-unicorn-mafia">Unicorn Mafia</label>
+                            </div>
+                            <div class="checkbox-item">
                                 <input type="checkbox" id="referral-wef-2025" name="referral[]" value="wef-2025" class="referral-checkbox">
                                 <label for="referral-wef-2025">WEF 2025</label>
-                            </div>
-                            <div class="checkbox-item">
-                                <input type="checkbox" id="referral-ef-anthropic" name="referral[]" value="ef-anthropic" class="referral-checkbox">
-                                <label for="referral-wl">Workshop Lab</label>
-                            </div>
-                            <div class="checkbox-item">
-                                <input type="checkbox" id="referral-yorkseed" name="referral[]" value="yorkseed" class="referral-checkbox">
-                                <label for="referral-yorkseed">Yorkseed</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-yc-demo-day" name="referral[]" value="yc-demo-day" class="referral-checkbox">
@@ -203,6 +207,10 @@
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-yc-founder" name="referral[]" value="yc-founder" class="referral-checkbox">
                                 <label for="referral-yc-founder">YC Founder</label>
+                            </div>
+                            <div class="checkbox-item">
+                                <input type="checkbox" id="referral-yorkseed" name="referral[]" value="yorkseed" class="referral-checkbox">
+                                <label for="referral-yorkseed">Yorkseed</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-other" name="referral[]" value="other" class="referral-checkbox" onchange="toggleOtherReferralInput()">
