--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
                                 <label for="referral-yc-demo-day">YC Demo Day</label>
                             </div>
                             <div class="checkbox-item">
+                                <input type="checkbox" id="referral-yc-demo-day-x25" name="referral[]" value="yc-demo-day-x25" class="referral-checkbox">
+                                <label for="referral-yc-demo-day-x25">YC Demo Day X25</label>
+                            </div>
+                            <div class="checkbox-item">
                                 <input type="checkbox" id="referral-yc-founder" name="referral[]" value="yc-founder" class="referral-checkbox">
                                 <label for="referral-yc-founder">YC Founder</label>
                             </div>
