--- a/index.html
+++ b/index.html
@@ -141,20 +141,8 @@
                         <label>Who is your source of referral? (select all that apply) *</label>
                         <div class="checkbox-group" id="referralCheckboxes">
                             <div class="checkbox-item">
-                                <input type="checkbox" id="referral-club-y-london" name="referral[]" value="club-y-london" class="referral-checkbox">
-                                <label for="referral-club-y-london">Club Y London</label>
-                            </div>
-                            <div class="checkbox-item">
-                                <input type="checkbox" id="referral-club-y-paris" name="referral[]" value="club-y-paris" class="referral-checkbox">
-                                <label for="referral-club-y-paris">Club Y Paris</label>
-                            </div>
-                            <div class="checkbox-item">
-                                <input type="checkbox" id="referral-club-y-retreat" name="referral[]" value="club-y-retreat" class="referral-checkbox">
-                                <label for="referral-club-y-retreat">Club Y Retreat</label>
-                            </div>
-                            <div class="checkbox-item">
-                                <input type="checkbox" id="referral-club-y-us" name="referral[]" value="club-y-us" class="referral-checkbox">
-                                <label for="referral-club-y-us">Club Y US</label>
+                                <input type="checkbox" id="referral-columbia" name="referral[]" value="columbia" class="referral-checkbox">
+                                <label for="referral-columbia">Columbia University</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-ef-anthropic" name="referral[]" value="ef-anthropic" class="referral-checkbox">
@@ -174,7 +162,7 @@
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-ivy-league" name="referral[]" value="ivy-league" class="referral-checkbox">
-                                <label for="referral-ivy-league">Ivy League Network</label>
+                                <label for="referral-ivy-league">Ivy League Alumni</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-operators-friends" name="referral[]" value="operators-friends" class="referral-checkbox">
@@ -195,6 +183,10 @@
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-unicorn-mafia" name="referral[]" value="unicorn-mafia" class="referral-checkbox">
                                 <label for="referral-unicorn-mafia">Unicorn Mafia</label>
+                            </div>
+                            <div class="checkbox-item">
+                                <input type="checkbox" id="referral-vc-lab" name="referral[]" value="vc-lab" class="referral-checkbox">
+                                <label for="referral-vc-lab">VC Lab/ LP Institute</label>
                             </div>
                             <div class="checkbox-item">
                                 <input type="checkbox" id="referral-wef-2025" name="referral[]" value="wef-2025" class="referral-checkbox">
