little bit of everything

--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
                                 <label for="referral-yorkseed">Yorkseed</label>
                             </div>
                             <div class="checkbox-item">
+                                <input type="checkbox" id="referral-everything" name="referral[]" value="everything" class="referral-checkbox">
+                                <label for="referral-everything">A little bit of everything</label>
+                            </div>
+                            <div class="checkbox-item">
                                 <input type="checkbox" id="referral-other" name="referral[]" value="other" class="referral-checkbox" onchange="toggleOtherReferralInput()">
                                 <label for="referral-other">Other</label>
                             </div>
